# IcarianEditor

./: .gitignore  .gitmodules  3RD-PARTY SOURCES.md  CMakeLists.txt  LICENSE  README.md  build.c  build.sh  buildDebug.sh  buildSymbols.sh  clean.sh  crossWinBuild.sh  crossWinSetup.sh  export.c  export.sh  remoteBuild.sh  setup.bat  setup.sh
EditorInterop/: EditorCreateDefModalInterop.h  EditorDefLibraryInterop.h  EditorFileHandlerInterop.h  EditorFileHandlerInteropStructures.h  EditorGizmosInteropStructures.h  EditorSceneInterop.h  WorkspaceInterop.h
IcarianEditor/: BuildIcarianEditor.h  CMakeLists.txt  IcarianEditorConfig.h.in
IcarianEditor/include/: .gitignore  AppMain.h  Application.h  AssetLibrary.h  ConsoleCommand.h  Datastore.h  EditorConfig.h  EditorInputManager.h  FileDialog.h  FileDialogBlock.h  FileHandler.h  FlareImGui.h  GUI.h  Gizmos.h  IO.h  KtxHelpers.h  Logger.h  Model.h  MonoProjectGenerator.h  PixelShader.h  ProcessManager.h  ProfilerData.h  Project.h  RenderCommand.h  SCPConnection.h  SCPPipe.h  SSHPipe.h  Shader.h  ShaderBuffers.h  ShaderGenerator.h  ShaderProgram.h  ShaderStorage.h  ShaderStorageObject.h  SocketPipe.h  TemplateBuilder.h  Texture.h  TextureSampler.h  UniformBuffer.h  VertexShader.h  Workspace.h
IcarianEditor/include/LoadingTasks/: BuildLoadingTask.h  CopyBuildLibraryLoadingTask.h  GenerateConfigLoadingTask.h  LoadingTask.h  RemoteBuildLoadingTask.h  RunRemoteLoadingTask.h  SerializeAssetsLoadingTask.h  SyncRemoteBuildLoadingTask.h
IcarianEditor/include/Modals/: BuildProjectModal.h  ConfirmModal.h  CreateAssemblyControlModal.h  CreateComponentModal.h  CreateDefTableModal.h  CreateEmptyScriptModal.h  CreateFileModal.h  CreateProjectModal.h  CreateRigidBodyScriptModal.h  CreateSciptableModal.h  CreateTriggerBodyScriptModal.h  EditorConfigModal.h  ErrorModal.h  GetAssetModal.h  LoadingModal.h  Modal.h  OpenProjectModal.h  ProjectConfigModal.h  RenamePathModal.h  RuntimeModal.h  SSHConnectModal.h  SSHConnectedModal.h
IcarianEditor/include/Runtime/: RuntimeManager.h  RuntimeStorage.h
IcarianEditor/include/Windows/: AssetBrowserWindow.h  ConsoleWindow.h  ControlWindow.h  EditorWindow.h  GameWindow.h  HierarchyWindow.h  ProfilerWindow.h  PropertiesWindow.h  SceneDefsWindow.h  TimelineWindow.h  Window.h
IcarianEditor/modules/: FileToHeader.cmake
IcarianEditor/shaders/: gizmo.frag  gizmo.vert  grid.frag  grid.vert
IcarianEditor/src/: AppMain.cpp  Application.cpp  AssetBrowserWindow.cpp  AssetLibrary.cpp  BuildLoadingTask.cpp  BuildProjectModal.cpp  ConfirmModal.cpp  ConsoleCommand.cpp  ConsoleWindow.cpp  ControlWindow.cpp  CopyBuildLibraryLoadingTask.cpp  CreateAssemblyControlModal.cpp  CreateComponentModal.cpp  CreateDefTableModal.cpp  CreateEmptyScriptModal.cpp  CreateFileModal.cpp  CreateProjectModal.cpp  CreateRigidBodyScriptModal.cpp  CreateScriptableModal.cpp  CreateTriggerBodyScriptModal.cpp  Datastore.cpp  EditorConfig.cpp  EditorConfigModal.cpp  EditorInputManager.cpp  EditorWindow.cpp  ErrorModal.cpp  FileDialog.cpp  FileDialogBlock.cpp  FileHandler.cpp  FlareImGui.cpp  GUI.cpp  GameWindow.cpp  GenerateConfigLoadingTask.cpp  GetAssetModal.cpp  Gizmos.cpp  HierarchyWindow.cpp  IO.cpp  LoadingModal.cpp  Logger.cpp  Modal.cpp  (+40 more)
IcarianEditor/templates/: About.xml  AssemblyControl.cs  Canvas.ui  Component.cs  DefTable.cs  EmptyScript.cs  PixelShader.fpix  RigidBody.cs  Scene.iscene  Scriptable.cs  ShadowVertexShader.fvert  SkinnedVertexShader.fvert  TriggerBody.cs  VertexShader.fvert
IcarianEditorCS/: BuildIcarianEditorCS.h  IcarianEditorCS.csproj
IcarianEditorCS/src/: AnimationMaster.cs  AssetProperties.cs  ClipBoard.cs  ColliderRenderer.cs  EditorConfig.cs  EditorDefLibrary.cs  EditorScene.cs  EditorWindow.cs  FileHandler.cs  GUI.cs  Gizmos.cs  HierarchyWindow.cs  Program.cs  SceneData.cs  SceneDefsWindow.cs  Workspace.cs
IcarianEditorCS/src/Editor/: EditorDisplay.cs  MeshRendererEditorDisplay.cs  PhysicsBodyEditorDisplay.cs  RigidBodyEditorDisplay.cs  SkeletonAnimatorEditorDisplay.cs  SkinnedMeshRendererEditorDisplay.cs  TriggerBodyEditorDisplay.cs
IcarianEditorCS/src/Modals/: AddComponentModal.cs  ConfirmModal.cs  CreateDefModal.cs  CreateSceneDefModal.cs  DeleteSceneObjectModal.cs  GUIGetDefSelectorModal.cs  Modal.cs  NewSceneObjectModal.cs
IcarianEditorCS/src/Properties/: AmbientLightPropertiesWindow.cs  CameraPropertiesWindow.cs  DirectionalLightPropertiesWindow.cs  GameObjectPropertiesWindow.cs  LightPropertiesWindow.cs  MaterialPropertiesWindow.cs  ParticleSystem2DWindow.cs  PointLightPropertiesWindow.cs  PropertiesEditorWindow.cs  PropertiesWindow.cs  SelectionObjectPropertiesWindow.cs  SpotLightPropertiesWindow.cs
IcarianEditorCS/src/Windows/: EditorWindow.cs  HierarchyWindow.cs  PropertiesWindow.cs  SceneDefsWindow.cs
